force-app/main/default/objects/CBK_Lista_Valores__c/CBK_Lista_Valores__c.object-meta.xml
<CustomObject>
    <description>Entidad que permite configurar listas de valores dinámicas</description>
    <label>Lista Valores General</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listas Valores General</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>