force-app/main/default/objects/CBK_Lista_Valores__c/fields/CBK_Activa__c.field-meta.xml
<CustomField>
    <fullName>CBK_Activa__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox que indica si un registro se encuentra activo</description>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>