force-app/main/default/objects/CBK_Lista_Valores__c/fields/CBK_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>CBK_Descripcion__c</fullName>
    <description>Permite añadir una descipción al objeto</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripcion</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>