force-app/main/default/objects/CBK_Lista_Valores__c/fields/CBK_Lista__c.field-meta.xml
<CustomField>
    <fullName>CBK_Lista__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Permite seleccionar la lista a la que pertenece un valor</description>
    <label>Lista</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CBK_Lista_Valores__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lista de valores</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CBK_Lista_Valores__c</referenceTo>
    <relationshipLabel>Valores</relationshipLabel>
    <relationshipName>CBK_Valores</relationshipName>
    <type>Lookup</type>
</CustomField>