force-app/main/default/objects/CBK_Lista_Valores__c/fields/CBK_Valor3__c.field-meta.xml
<CustomField>
    <fullName>CBK_Valor3__c</fullName>
    <description>Permite introducir un valor</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Valor 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>