force-app/main/default/objects/CBK_Lista_Valores__c/fields/CBK_Valor_SFDC__c.field-meta.xml
<CustomField>
    <fullName>CBK_Valor_SFDC__c</fullName>
    <description>Valor traducido a Salesforce</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Valor SFDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>