force-app/main/default/objects/CBK_Lista_Valores__c/recordTypes/CBK_Lista_de_valores.recordType-meta.xml
<RecordType>
    <fullName>CBK_Lista_de_valores</fullName>
    <active>true</active>
    <description>Registros de tipo lista</description>
    <label>Lista de valores</label>
</RecordType>