force-app/main/default/objects/CBK_Lista_Valores__c/recordTypes/CBK_Valor.recordType-meta.xml
<RecordType>
    <fullName>CBK_Valor</fullName>
    <active>true</active>
    <description>Registros de tipo valor</description>
    <label>Valor</label>
</RecordType>