force-app/main/default/objects/CBK_Lista_Valores__c/validationRules/GRR_Bloqueo_Editar_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>GRR_Bloqueo_Editar_Name</fullName>
    <active>true</active>
    <description>No se permite modificar el campo Name si se trata de una lista del negocio GRR</description>
    <errorConditionFormula>AND( 
					AND(
									!$Permission.CBK_BypassValidationRules,
									!$Permission.GRR_ByPassValidationRules
					),
					AND(
									RecordType.DeveloperName = &apos;CBK_Lista_de_valores&apos;,
									ISCHANGED(Name),
									ISPICKVAL(CBK_Negocio__c, &apos;GRR&apos;)
					) 
	)</errorConditionFormula>
    <errorMessage>No se permite modificar el nombre de la lista</errorMessage>
</ValidationRule>